--- a/my-new-project/app/styles/main.css
+++ b/my-new-project/app/styles/main.css
@@ -81,3 +81,21 @@ body {
     border-bottom: 0;
   }
 }
+body{background: #f7f8fb;}
+.header{background: #fff;height: 64px;position: fixed;left: 0;right: 0;z-index: 100;}
+.header .logo{ float: left;padding: 2px;}
+.header .bs-navbar-nav{float: left;margin-left: 20px;}
+.bs-nav>li{float: left;position: relative;display: block;}
+.bs-nav>li a{padding: 22px 20px;display: block;color: #555;}
+.bs-nav>li a:hover{color: #000;}
+.bs-navbar.bs-navbar-default{width: 960px;margin: 0 auto;}
+@media (min-width: 768px){
+  .bs-navbar-right {float: right;display: inline-block;margin-right: 15px;}
+}
+.header .dropdown-menu{ left: auto;left: auto;min-width: 100px;text-align: center;top: 60px;}
+/* 内容部分 */
+.container{padding: 100px 0 50px 0;width: 960px;margin: 0 auto;}
+
+/* 登录部分 */
+.bs-login{position: relative;}
+.bs-login form{width: 400px;margin: 0 auto;padding: 40px;background: #fff;/* border: 1px solid #ccc; */box-shadow: 0 0 2px #ccc;}
