--- a/my-new-project/app/views/login.html
+++ b/my-new-project/app/views/login.html
@@ -2,7 +2,7 @@
 	<form>
 		<div class="form-group">
 		    <label for="exampleInputEmail1">帐号</label>
-		    <input type="text" class="form-control" name="studentId" ng-model="user.data.userId" placeholder="学号"/>
+		    <input type="text" class="form-control" name="studentId" ng-model="user.data.studentId" placeholder="学号"/>
 	  	</div>
 		<div class="form-group">
 		    <label for="exampleInputPassword1">密码</label>
