--- a/my-new-project/app/views/login.html
+++ b/my-new-project/app/views/login.html
@@ -1,24 +1,24 @@
 <div class="bs-login" ng-init="user.init()">
-	<form>
+	<form name="loginForm">
 		<div class="form-group">
 		    <label for="exampleInputEmail1">帐号</label>
-		    <input type="text" class="form-control" name="studentId" ng-model="user.data.studentId" placeholder="学号"/>
+		    <input type="text" class="form-control" name="studentId" ng-model="user.data.studentId" placeholder="学号" required />
 	  	</div>
 		<div class="form-group">
 		    <label for="exampleInputPassword1">密码</label>
-		    <input type="password" class="form-control" name="studentPassword" ng-model="user.data.password" placeholder="密码">
+		    <input type="password" class="form-control" name="password" ng-model="user.data.password" placeholder="密码" required />
 	  	</div>
 
 		<div class="form-group">
 		    <label for="exampleInputEmail1">类型</label>
 			<label class="radio-inline">
-		  		<input type="radio" name="inlineRadioOptions" name="inlineRadio1" ng-model="user.data.usertype" value="1"> 学生
+		  		<input type="radio" name="inlineRadio" ng-model="user.data.usertype" value="1" required /> 学生
 			</label>
 			<label class="radio-inline">
-			  	<input type="radio" name="inlineRadioOptions" name="inlineRadio2" ng-model="user.data.usertype" value="0"> 老师
+			  	<input type="radio" name="inlineRadio" ng-model="user.data.usertype" value="0" required /> 老师
 			</label>
 		</div>
 	  	
-	  	<button type="submit" class="btn btn-primary" ng-click="user.loginFunc()">登入</button>
+	  	<button type="submit" class="btn btn-primary" ng-click="user.loginFunc()" ng-disabled="loginForm.studentId.$error.required || loginForm.password.$error.required || loginForm.inlineRadio.$error.required">登入</button>
 	</form>
 </div>
