--- a/my-new-project/app/views/resetpwd.html
+++ b/my-new-project/app/views/resetpwd.html
@@ -3,7 +3,8 @@
 		<h5 class="header-title">修改密码</h5>
 		<div class="form-group">
 		    <label for="exampleInputPassword0">旧密码</label>
-		    <input type="password" class="form-control" name="oldPwd" ng-model="pwdFunc.data.oldpwd" placeholder="旧密码" required/>
+		    <input type="password" class="form-control" name="oldPwd" ng-model="pwdFunc.data.oldpwd" placeholder="旧密码" ng-blur="pwdFunc.checkOldpwd()" required/>
+		    <small class="error-tips" ng-show="isPwdError">密码错误</small>
 	  	</div>
 		<div class="form-group">
 		    <label for="exampleInputPassword1">新密码</label>
