--- a/my-new-project/app/views/login.html
+++ b/my-new-project/app/views/login.html
@@ -9,6 +9,8 @@
 		    <input type="password" class="form-control" name="password" ng-model="user.data.password" placeholder="密码" required />
 	  	</div>
 
+	  	<!-- 类型暂时隐藏 -->
+<!-- 
 		<div class="form-group">
 		    <label for="exampleInputEmail1">类型</label>
 			<label class="radio-inline">
@@ -17,8 +19,8 @@
 			<label class="radio-inline">
 			  	<input type="radio" name="inlineRadio" ng-model="user.data.usertype" value="0" required /> 老师
 			</label>
-		</div>
+		</div> -->
 	  	
-	  	<button type="submit" class="btn btn-primary" ng-click="user.loginFunc()" ng-disabled="loginForm.studentId.$error.required || loginForm.password.$error.required || loginForm.inlineRadio.$error.required">登入</button>
+	  	<button type="submit" class="btn btn-primary" ng-click="user.loginFunc()" ng-disabled="loginForm.studentId.$error.required || loginForm.password.$error.required ">登入</button><!-- || loginForm.inlineRadio.$error.required -->
 	</form>
 </div>
