--- a/my-new-project/app/styles/base.css
+++ b/my-new-project/app/styles/base.css
@@ -62,7 +62,7 @@ ul {
   outline: none !important;
 }
 a{text-decoration: none;color: #333;}
-a:hover, a:focus{text-decoration: none;}
+a:hover, a:focus{text-decoration: none;color: #333;}
 /* 清除浮动 */
 .clearfix{zoom:1;}
 .clearfix:after{content:´.´;display:block;visibility:none;height:0;clear:both;}
