--- a/my-new-project/app/views/setting.html
+++ b/my-new-project/app/views/setting.html
@@ -1,34 +1,92 @@
 <div class="bs-setting clearfix" ng-init="user.init()">
 
 	<div class="setting-lft">
-		<div class="setting-box" ><!-- ng-show="!adminConfig.superAdmin" -->
+		<div class="setting-box" ng-show="!adminConfig.superAdmin"><!--  -->
 			<a href="">修改密码</a>
 			<span class="fa fa-gear"></span>
 		</div>
-		<div class="setting-box">添加管理员</div>
-		<div class="setting-box">添加老师</div>
-		<div class="setting-box">添加学生</div>
+		<div class="setting-box">
+			<a href="">添加管理员</a>
+			<span class="fa fa-user-plus"></span>
+		</div>
+		<div class="setting-box">
+			<a href="">添加老师</a>
+			<span class="fa fa-user"></span>
+        </div>
+		<div class="setting-box">
+			<a href="">添加学生</a>
+			<span class="fa fa-users"></span>
+		</div>
 	</div>
 	<div class="setting-rht">
+		<!-- 修改密码 -->
 		<form name="resetpwdForm">
-		<h5 class="header-title">修改密码</h5>
-		<div class="form-group">
-		    <label for="exampleInputPassword0">旧密码</label>
-		    <input type="password" class="form-control" name="oldPwd" ng-model="pwdFunc.data.oldpwd" placeholder="旧密码" ng-blur="pwdFunc.checkOldpwd()" required/>
-		    <small class="error-tips" ng-show="isPwdError">密码错误</small>
-	  	</div>
-		<div class="form-group">
-		    <label for="exampleInputPassword1">新密码</label>
-		    <input type="password" class="form-control" name="newPwd1" ng-model="pwdFunc.data.newpwd1" placeholder="新密码" required/>
-	  	</div>
-	  	<div class="form-group">
-		    <label for="exampleInputPassword2">确认新密码</label>
-		    <input type="password" class="form-control" name="newPwd2" ng-model="pwdFunc.data.newpwd2" placeholder="新密码" ng-change="pwdFunc.checkPwd()" required/>
-		    <small class="error-tips" ng-show="pwdCheckError">新密码不一致</small>
-	  	</div>
-	  	
-	  	<button type="submit" class="btn btn-primary" ng-click="pwdFunc.saveReset()" ng-disabled="resetpwdForm.oldPwd.$error.required || resetpwdForm.newPwd1.$error.required || resetpwdForm.newPwd2.$error.required">保存</button>
-	  	<button type="button" class="btn btn-default" ng-click="pwdFunc.cancel()" >取消</button>
-	</form>
+			<h5 class="header-title">修改密码</h5>
+			<div class="form-group">
+			    <label for="exampleInputPassword0">旧密码</label>
+			    <input type="password" class="form-control" name="oldPwd" ng-model="pwdFunc.data.oldpwd" placeholder="旧密码" ng-blur="pwdFunc.checkOldpwd()" required/>
+			    <small class="error-tips" ng-show="isPwdError">密码错误</small>
+		  	</div>
+			<div class="form-group">
+			    <label for="exampleInputPassword1">新密码</label>
+			    <input type="password" class="form-control" name="newPwd1" ng-model="pwdFunc.data.newpwd1" placeholder="新密码" required/>
+		  	</div>
+		  	<div class="form-group">
+			    <label for="exampleInputPassword2">确认新密码</label>
+			    <input type="password" class="form-control" name="newPwd2" ng-model="pwdFunc.data.newpwd2" placeholder="新密码" ng-change="pwdFunc.checkPwd()" required/>
+			    <small class="error-tips" ng-show="pwdCheckError">新密码不一致</small>
+		  	</div>
+		  	
+		  	<button type="submit" class="btn btn-primary" ng-click="pwdFunc.saveReset()" ng-disabled="resetpwdForm.oldPwd.$error.required || resetpwdForm.newPwd1.$error.required || resetpwdForm.newPwd2.$error.required">保存</button>
+		  	<button type="button" class="btn btn-default" ng-click="pwdFunc.cancel()" >取消</button>
+		</form>
+		<!-- 添加管理员 -->
+		<form name="resetpwdForm">
+			<h5 class="header-title">添加管理员</h5>
+			<div class="form-group">
+			    <label>账户名</label>
+			    <input type="password" class="form-control" name="oldPwd" ng-model="" placeholder="学号/学工号"  required/>
+			    <!-- <small class="error-tips" ng-show="isPwdError">密码错误</small> -->
+		  	</div>
+			<div class="form-group">
+			    <label for="exampleInputPassword1">姓名</label>
+			    <input type="password" class="form-control" name="newPwd1" ng-model="" placeholder="姓名" required/>
+		  	</div>
+		  	
+		  	<button type="submit" class="btn btn-primary" ng-click="pwdFunc.saveTeamAdmin()" ng-disabled="">保存</button>
+		  	<button type="button" class="btn btn-default" ng-click="pwdFunc.cancel()" >取消</button>
+		</form>
+		<!-- 添加老师 -->
+		<form name="resetpwdForm">
+			<h5 class="header-title">添加老师</h5>
+			<div class="form-group">
+			    <label>学工号</label>
+			    <input type="password" class="form-control" name="oldPwd" ng-model="" placeholder="学号/学工号"  required/>
+			    <!-- <small class="error-tips" ng-show="isPwdError">密码错误</small> -->
+		  	</div>
+			<div class="form-group">
+			    <label for="exampleInputPassword1">姓名</label>
+			    <input type="password" class="form-control" name="newPwd1" ng-model="" placeholder="姓名" required/>
+		  	</div>
+		  	
+		  	<button type="submit" class="btn btn-primary" ng-click="pwdFunc.saveTeacher()" ng-disabled="">保存</button>
+		  	<button type="button" class="btn btn-default" ng-click="pwdFunc.cancel()" >取消</button>
+		</form>
+		<!-- 添加学生 -->
+		<form name="resetpwdForm">
+			<h5 class="header-title">添加学生</h5>
+			<div class="form-group">
+			    <label>学号</label>
+			    <input type="password" class="form-control" name="oldPwd" ng-model="" placeholder="学号/学工号"  required/>
+			    <!-- <small class="error-tips" ng-show="isPwdError">密码错误</small> -->
+		  	</div>
+			<div class="form-group">
+			    <label for="exampleInputPassword1">姓名</label>
+			    <input type="password" class="form-control" name="newPwd1" ng-model="" placeholder="姓名" required/>
+		  	</div>
+		  	
+		  	<button type="submit" class="btn btn-primary" ng-click="pwdFunc.saveStudent()" ng-disabled="">保存</button>
+		  	<button type="button" class="btn btn-default" ng-click="pwdFunc.cancel()" >取消</button>
+		</form>
 	</div>
 </div>
