--- a/my-new-project/app/views/login.html
+++ b/my-new-project/app/views/login.html
@@ -2,7 +2,7 @@
 	<form name="loginForm">
 		<div class="form-group">
 		    <label for="exampleInputEmail1">帐号</label>
-		    <input type="text" class="form-control" name="studentId" ng-model="user.data.studentId" placeholder="学号" required />
+		    <input type="text" class="form-control" name="userId" ng-model="user.data.userId" placeholder="学号" required />
 	  	</div>
 		<div class="form-group">
 		    <label for="exampleInputPassword1">密码</label>
@@ -21,6 +21,6 @@
 			</label>
 		</div> -->
 	  	
-	  	<button type="submit" class="btn btn-primary" ng-click="user.loginFunc()" ng-disabled="loginForm.studentId.$error.required || loginForm.password.$error.required ">登入</button><!-- || loginForm.inlineRadio.$error.required -->
+	  	<button type="submit" class="btn btn-primary" ng-click="user.loginFunc()" ng-disabled="loginForm.userId.$error.required || loginForm.password.$error.required ">登入</button><!-- || loginForm.inlineRadio.$error.required -->
 	</form>
 </div>
