--- a/my-new-project/app/views/login.html
+++ b/my-new-project/app/views/login.html
@@ -1,5 +1,6 @@
-<div class="bs-login" ng-init="user.init()">
+<div class="bs-login op-form" ng-init="user.init()">
 	<form name="loginForm">
+		<h5 class="header-title">系统登录<span>（初始密码6个0）</span></h5>
 		<div class="form-group">
 		    <label for="exampleInputEmail1">帐号</label>
 		    <input type="text" class="form-control" name="userId" ng-model="user.data.userId" placeholder="学号" required />
@@ -8,18 +9,6 @@
 		    <label for="exampleInputPassword1">密码</label>
 		    <input type="password" class="form-control" name="password" ng-model="user.data.password" placeholder="密码" required />
 	  	</div>
-
-	  	<!-- 类型暂时隐藏 -->
-<!-- 
-		<div class="form-group">
-		    <label for="exampleInputEmail1">类型</label>
-			<label class="radio-inline">
-		  		<input type="radio" name="inlineRadio" ng-model="user.data.usertype" value="1" required /> 学生
-			</label>
-			<label class="radio-inline">
-			  	<input type="radio" name="inlineRadio" ng-model="user.data.usertype" value="0" required /> 老师
-			</label>
-		</div> -->
 	  	
 	  	<button type="submit" class="btn btn-primary" ng-click="user.loginFunc()" ng-disabled="loginForm.userId.$error.required || loginForm.password.$error.required ">登入</button><!-- || loginForm.inlineRadio.$error.required -->
 	</form>
