--- a/my-new-project/app/styles/main.css
+++ b/my-new-project/app/styles/main.css
@@ -53,7 +53,7 @@ body {
 
 /* Supporting marketing content */
 .marketing {
-  margin: 40px 0;
+  margin: 30px 0;
 }
 .marketing p + h4 {
   margin-top: 28px;
@@ -92,6 +92,10 @@ body{background: #f7f8fb;}
 @media (min-width: 768px){
   .bs-navbar-right {float: right;display: inline-block;margin-right: 15px;}
 }
+/* 页面左右布局 */
+.item-lft{ float: left;margin-right: 20px;}
+.item-rht{ overflow: hidden;}
+
 .header .dropdown-menu{ left: auto;left: auto;min-width: 100px;text-align: center;top: 60px;}
 /* 内容部分 */
 .container{padding: 100px 0 50px 0;width: 960px;margin: 0 auto;}
@@ -105,6 +109,14 @@ body{background: #f7f8fb;}
 .course-ul{font-size: 0;}
 .course-ul li{ width: 208px;height: auto;display: inline-block; vertical-align: top;margin: 10px;
     background: #fff;font-size: 14px;box-shadow: 0 0 3px #ccc;}
-.course-ul .course-title{ font-size: 14px;font-weight: 600;line-height: 30px;margin-left: 10px;}
+.course-ul .course-title{ font-size: 14px;font-weight: 600;line-height: 30px;margin-left: 10px;height: 30px;}
 .course-ul .course-poster{ width: 100%;height: 200px;display: block;margin: 0 auto;padding: 3px;}
 .course-ul .course-info{ height: 30px;line-height: 30px;border-top: 1px solid #f3f3f3;margin-left: 10px;}
+/*各种颜色*/
+.lf-blue{ background: rgba(41, 208, 155, 1)}
+.list-by{ margin: 0 20px 20px 10px;height: 50px;position: relative;line-height: 50px;}
+.top-filter{ display: inline-block;vertical-align: middle; margin-right: 40px;}
+.top-filter mark{padding: 5px;cursor: pointer;color: #fff;border-radius: 2px;}
+.top-filter.search{ position: absolute;right: 0;}
+.top-filter.search .lf-search{ width: 300px;}
+.lf-search-btn{ cursor: pointer;background: rgba(41, 208, 155, 1);color: #fff;}
