--- a/my-new-project/app/views/main.html
+++ b/my-new-project/app/views/main.html
@@ -6,12 +6,24 @@
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div> -->
-
 <div class="row marketing" ng-init="mainFunc.init()">
+  <div class="list-by">
+    <div class="top-filter">
+      排序：
+      <mark class="lf-blue ">按时间</mark>
+      <mark class="lf-blue">按人气</mark>
+    </div>
+    <div class="top-filter search">
+      <div class="input-group lf-search">
+        <input type="text" class="form-control" placeholder="输入关键字或老师姓名">
+        <div class="input-group-addon lf-search-btn">搜索</div>
+      </div>
+    </div>
+  </div>
   <ul class="course-ul">
     <li class="course-list" ng-repeat="cList in courseLists">
       <img class="course-poster" ng-src="{{ cList.lab_url }}" alt="">
-      <h5 class="course-title"><a href="#/course/{{ cList.lab_id }}">{{ cList.lab_name }}</a></h5>
+      <h5 class="course-title"><a href="#/course/{{ cList.id }}">{{ cList.lab_name }}</a></h5>
       <div class="course-info">
         <span>{{ cList.createTime | date: "yyyy-MM-dd" }}</span>
         <span>{{ cList.uploader }}</span>
