--- a/my-new-project/app/views/uploadlab.html
+++ b/my-new-project/app/views/uploadlab.html
@@ -3,9 +3,25 @@
 	<h5 ng-show="hasAddLab">添加课程考核</h5>
 	<form ng-show="!hasAddLab">
 		<div class="form-group">
+			<label>课程类型</label>
+			<div>
+				<label class="radio-inline">
+				  <input type="radio" name="inlineRadio" ng-model="uploadFunc.data.ctype" value="1"> C++
+				</label>
+				<label class="radio-inline">
+				  <input type="radio" name="inlineRadio" ng-model="uploadFunc.data.ctype" value="2"> Visual Basic
+				</label>
+				<label class="radio-inline">
+				  <input type="radio" name="inlineRadio" ng-model="uploadFunc.data.ctype" value="3"> 数据库
+				</label>
+			</div>
+			
+		</div>
+		<div class="form-group">
 			<label>课程名</label>
 			<input type="text" class="form-control" ng-model="uploadFunc.data.labName" placeholder="输入课程名">
 		</div>
+		
 		<div class="form-group">
 			<label>课程介绍</label>
 			<textarea type="text" class="form-control" rows="4" ng-model="uploadFunc.data.labIntro" placeholder="输入课程介绍"></textarea>
