--- a/my-new-project/app/styles/uploadlab.css
+++ b/my-new-project/app/styles/uploadlab.css
@@ -1,6 +1,9 @@
 .upload-lab{ width: 100%;background: #fff;padding: 40px;border: 1px solid #f1f2f3;}
 .upload-lab h5{ font-size: 16px;color: #666;text-align: center;font-weight: 600;line-height: 2.4;}
-.upload-lab form{ width: 60%;min-width: 500px;}
+.upload-lab form{ width: 90%;min-width: 500px;}
 .upload-lab form select{ width: 200px;}
 .upload-lab form textarea{ resize: vertical;}
 .upload-lab form .c-back{ float: right;}
+.question-box{ background: #f1f2f3; padding: 20px;}
+.question-box label{ width: 100%;}
+.question-tips{ font-size: 12px;color: #4d90fe;margin-left: 10px;}
