--- a/my-new-project/app/views/test.html
+++ b/my-new-project/app/views/test.html
@@ -1,31 +1,34 @@
 <div ng-init="checkFunc.initFunc()">
-	<h4 class="exam-title">选择题</h4>
-	<div ng-repeat="qu in questions | orderBy: 'type'">
-
-		<!-- 单选 -->
-		<div ng-if="qu.type == 0" >
+	<div class="test-paper">
+		<h4 class="paper-title">C++第一章在线测试</h4>
+		<h5 class="exam-title">一、单选题</h5>
+		<div ng-repeat="qu in sinSelect" ng-init="index = ($index + 1)">
+			<!-- 单选 -->
 			<h5 class="que-title"><span>{{ $index+1 }}.</span>{{ qu.question }}</h5>
-			<div class="radio" ng-repeat="an in ['answer1', 'answer2', 'answer3', 'answer4', 'answer5', 'answer6', 'answer7'] track by $index" ng-show=" qu[an]!= '0' ">
+			<div class="radio" ng-repeat="an in aIndex track by $index" ng-show=" qu[an]!= '' ">
 			  	<label>
-			    	<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
-			    	{{ qu[an] }}
+			    	<input type="radio" name="options{{index}}" id="options{{index}}" value="{{$index+1}}" ng-model="qu.answer">
+			    	{{ qu[an] }} {{index}}
 			  	</label>
 			</div>
 		</div>
 
+		<h5 class="exam-title">二、多选题</h5>
 		<!-- 多选 -->
-		<div ng-if="qu.type == 1" >
+		<div ng-repeat="qu in mulSelect">
 			<h5 class="que-title"><span>{{ $index+1 }}.</span>{{ qu.question }}</h5>
-			<div class="checkbox" ng-repeat="an in ['answer1', 'answer2', 'answer3', 'answer4', 	'answer5', 'answer6', 'answer7'] track by $index" ng-show=" qu[an]!= '0' ">
+			<div class="checkbox" ng-repeat="an in aIndex track by $index" ng-show=" qu[an]!= '' ">
 			  	<label>
-				    <input type="checkbox" value="">
+				    <input type="checkbox" ng-change="" value="{{$index+1}}">
 				    {{ qu[an] }}
 			    </label>
 			</div>
 		</div>
 
+
+		<h5 class="exam-title">三、判断题</h5>
 		<!-- 判断 -->
-		<div ng-if="qu.type == 2" >
+		<div ng-repeat="qu in checking">
 			<h5 class="que-title"><span>{{ $index+1 }}.</span>{{ qu.question }}</h5>
 			<div class="checkbox">
 			  	<label class="radio-inline">
@@ -35,6 +38,9 @@
 				  	<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> {{ qu.answer2 }}
 				</label>
 			</div>
-		</div>	
+		</div>
+
+		<button class="btn btn-primary" ng-click="checkFunc.submitPaper()">提交</button>
 	</div>
+	
 </div>
