--- a/my-new-project/app/views/course.html
+++ b/my-new-project/app/views/course.html
@@ -1,7 +1,7 @@
 <div class="course-module" ng-init="learnFunc.initFunc()">
 	<div class="course-view clearfix">
 		<div class="course-lft">
-			
+			<a ng-href=" file:///{{ learnFunc.data.course.lab_url }}" target="_blank">开始学习</a>
 		</div>
 		<div class="course-rht">
 			<h5 class="c-title">{{ learnFunc.data.course.lab_name }}</h5>
