--- a/my-new-project/app/views/test.html
+++ b/my-new-project/app/views/test.html
@@ -1,6 +1,9 @@
 <div ng-init="checkFunc.initFunc()">
 	<div class="test-paper">
 		<h4 class="paper-title">C++第一章在线测试</h4>
+
+
+<!-- 单选 -->
 		<h5 class="exam-title">一、单选题</h5>
 		<div ng-repeat="qu in sinSelect" ng-init="index = ($index + 1)">
 			<!-- 单选 -->
@@ -8,34 +11,38 @@
 			<div class="radio" ng-repeat="an in aIndex track by $index" ng-show=" qu[an]!= '' ">
 			  	<label>
 			    	<input type="radio" name="options{{index}}" id="options{{index}}" value="{{$index+1}}" ng-model="qu.answer">
-			    	{{ qu[an] }} {{index}}
+			    	{{ qu[an] }}
 			  	</label>
 			</div>
 		</div>
 
+<!-- 多选题 -->
 		<h5 class="exam-title">二、多选题</h5>
 		<!-- 多选 -->
 		<div ng-repeat="qu in mulSelect">
 			<h5 class="que-title"><span>{{ $index+1 }}.</span>{{ qu.question }}</h5>
 			<div class="checkbox" ng-repeat="an in aIndex track by $index" ng-show=" qu[an]!= '' ">
 			  	<label>
-				    <input type="checkbox" ng-change="" value="{{$index+1}}">
+				    <input type="checkbox" ng-value="{{ $aIndex+1 }}" ng-model="sel" 
+				    ng-change="checkFunc.checkBoxSel(sel, {{ $index+1 }}, qu)">
+				    <!-- ng-change="checkFunc.checkBoxSel(sel{{ $index+1 }}, {{ $index+1 }} )" 
+				    ng-true-value="{{$index+1}}" ng-false-value="0" -->
 				    {{ qu[an] }}
 			    </label>
 			</div>
 		</div>
 
-
+<!-- 判断题 -->
 		<h5 class="exam-title">三、判断题</h5>
 		<!-- 判断 -->
 		<div ng-repeat="qu in checking">
 			<h5 class="que-title"><span>{{ $index+1 }}.</span>{{ qu.question }}</h5>
 			<div class="checkbox">
 			  	<label class="radio-inline">
-				  	<input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1"> {{ qu.answer1 }}
+				  	<input type="radio" name="check{{$index+1}}" ng-model="qu.answer" value="1"> {{ qu.answer1 }}
 				</label>
 				<label class="radio-inline">
-				  	<input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2"> {{ qu.answer2 }}
+				  	<input type="radio" name="check{{$index+1}}" ng-model="qu.answer" value="2"> {{ qu.answer2 }}
 				</label>
 			</div>
 		</div>
